# boostPythonExample

./: .gitignore  README.md
helloQt/: CMakeLists.txt
helloQt/src/: testclass.cpp  testclass.h  testclassBoost.cpp
notes/: build_boost_python
tutorial/: CMakeLists.txt  hello.cpp
